--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vigilanteRk/mover.git"
+    "url": "https://github.com/vigilanteRk/mover.git"
   },
   "author": "Rajkumar Singh",
   "license": "ISC",
